--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ jobs:
         parameters:
           toolset: v142
           cmake_work_dir: "build"
+          cmake_install_dir: $(Build.ArtifactStagingDirectory)
 
   - job: ubuntu_cmake_clang8
     pool:
@@ -31,9 +32,9 @@ jobs:
     steps:
       - template: azure/steps-ubuntu.yml
         parameters:
-          cmake_cxx_compiler: "clang-8"
+          cmake_cxx_compiler: "g++-9"
           cmake_work_dir: "build"
-          cmake_install_dir: "../install"
+          cmake_install_dir: $(Build.ArtifactStagingDirectory)
 
   - job: mac_cmake_appleclang11
     pool:
@@ -45,4 +46,4 @@ jobs:
       - template: azure/steps-mac.yml
         parameters:
           cmake_work_dir: "build"
-          cmake_install_dir: "../install"
+          cmake_install_dir: $(Build.ArtifactStagingDirectory)
