--- a/azure/steps-win-vs.yml
+++ b/azure/steps-win-vs.yml
@@ -11,14 +11,21 @@ steps:
       targetType: "inline"
       script: systeminfo
 
+  - task: Cache@2
+    inputs:
+      key: "vcpkg_x64-windows"
+      path: "C:/vcpkg"
+
   - task: PowerShell@2
     inputs:
       targetType: "inline"
-      script: vcpkg install --triplet x64-windows boost-filesystem
+      script: |
+        vcpkg search boost-filesystem
+        vcpkg install --triplet x64-windows boost-filesystem
 
   - task: CMake@1
     inputs:
-      cmakeArgs: . -A $(platform) -DBUILD_SHARED_LIBS=$(is_dynamic) -DCMAKE_TOOLCHAIN_FILE="C:\vcpkg\scripts\buildsystems\vcpkg.cmake" -DBUILD_TESTING=ON  -DCMAKE_INSTALL_PREFIX=${{ parameters.cmake_install_dir }}
+      cmakeArgs: .. -A $(platform) -DBUILD_SHARED_LIBS=$(is_dynamic) -DCMAKE_TOOLCHAIN_FILE="C:\vcpkg\scripts\buildsystems\vcpkg.cmake" -DBUILD_TESTING=ON  -DCMAKE_INSTALL_PREFIX=${{ parameters.cmake_install_dir }}
       workingDirectory: ${{ parameters.cmake_work_dir }}
 
   - task: MSBuild@1
@@ -33,5 +40,7 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: "inline"
-      script: ctest --output-on-failure -C Debug
+      script: |
+        cmake --build . --target install;
+        ctest --output-on-failure -C Debug;
       workingDirectory: ${{ parameters.cmake_work_dir }}
