--- a/azure/steps-win-vs.yml
+++ b/azure/steps-win-vs.yml
@@ -11,6 +11,11 @@ steps:
       targetType: "inline"
       script: systeminfo
 
+  - task: Cache@2
+    inputs:
+      key: "vcpkg_x64-windows"
+      path: "C:/vcpkg"
+
   - task: PowerShell@2
     inputs:
       targetType: "inline"
