--- a/azure/steps-win-vs.yml
+++ b/azure/steps-win-vs.yml
@@ -19,7 +19,9 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: "inline"
-      script: vcpkg install --triplet x64-windows boost-filesystem
+      script: |
+        vcpkg search boost-filesystem
+        vcpkg install --triplet x64-windows boost-filesystem
 
   - task: CMake@1
     inputs:
