--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,13 +3,19 @@
 #   - https://docs.sonarqube.org/latest/analysis/languages/cfamily/
 #   - https://docs.sonarqube.org/latest/analysis/coverage/
 #
+sonar.organization=luncliff-github
+sonar.host.url=https://sonarcloud.io
+
 sonar.projectKey=luncliff-wbcs
-sonar.projectName=WBCS subroutines
+sonar.projectName=Wide Byte Character Set subroutines
 sonar.projectVersion=1.0.0
 
-sonar.sources=. # src, examples
-sonar.cfamily.build-wrapper-output=bw-output
+sonar.language=c++
 sonar.sourceEncoding=UTF-8
+sonar.sources=. # src, examples
 
 sonar.cfamily.threads=2
+sonar.cfamily.build-wrapper-output=bw-output
 sonar.cfamily.llvm-cov.reportPath=docs/coverage
+
+sonar.verbose=true
