--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 build*
 sonar*
+bw-output
 
 install
 package-lock.json
@@ -73,8 +74,6 @@ docs/coverage
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-<<<<<<< HEAD
-=======
 
 ### JetBrains+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -575,4 +574,3 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/c++,java,xcode,gradle,visualstudio,jetbrains+all,visualstudiocode
->>>>>>> build
