--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.projectVersion=1.0.0
 
 sonar.language=c++
 sonar.sourceEncoding=UTF-8
-sonar.sources=. # src, examples
+sonar.sources=.
 
 sonar.cfamily.threads=2
 sonar.cfamily.build-wrapper-output=bw-output
