--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,6 +17,6 @@ sonar.sources=.
 
 sonar.cfamily.threads=2
 sonar.cfamily.build-wrapper-output=bw-output
-sonar.cfamily.llvm-cov.reportPath=docs/coverage
+sonar.cfamily.llvm-cov.reportPath=coverage.info
 
 sonar.verbose=true
