docs: status badge in readme
* sonar: separate build wrapper/scanner script

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,29 @@
-*.info
-
-build*
-sonar*
-bw-output
-
-install
-package-lock.json
-site
-
 .vscode
 
-*.info
+[Bb]uild*
+bw-output
+install
+package-lock.json
+
+site
 docs/coverage
+
+# Created by https://www.gitignore.io/api/sonarqube
+# Edit at https://www.gitignore.io/?templates=sonarqube
+
+### SonarQube ###
+# SonarQube ignore files.
+#
+# https://docs.sonarqube.org/display/SCAN/Analyzing+with+SonarQube+Scanner
+# Sonar Scanner working directories
+.sonar/
+.scannerwork/
+
+# http://www.sonarlint.org/commandline/
+# SonarLint working directories, configuration files (including credentials)
+.sonarlint/
+
+# End of https://www.gitignore.io/api/sonarqube
 
 # Created by https://www.gitignore.io/api/c++,java,xcode,gradle,visualstudio,jetbrains+all,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=c++,java,xcode,gradle,visualstudio,jetbrains+all,visualstudiocode
