--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,9 @@ sonar.organization=luncliff-github
 sonar.host.url=https://sonarcloud.io
 
 sonar.projectKey=luncliff-wbcs
-sonar.projectName=Wide Byte Character Set subroutines
+sonar.projectName=luncliff-wbcs
+sonar.projectDescription=Wide Byte Character Set subroutines
+
 sonar.projectVersion=1.0.0
 
 sonar.language=c++
@@ -17,6 +19,9 @@ sonar.sources=.
 
 sonar.cfamily.threads=2
 sonar.cfamily.build-wrapper-output=bw-output
-sonar.cfamily.llvm-cov.reportPath=coverage.info
+sonar.cfamily.gcov.reportsPath=build
 
-sonar.verbose=true
+# todo: https://alastairs-place.net/blog/2016/05/20/code-coverage-from-the-command-line-with-clang/
+# sonar.cfamily.llvm-cov.reportPath=...
+
+# sonar.verbose=true
