--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,6 +16,7 @@ sonar.projectVersion=1.0.0
 sonar.language=c++
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
+sonar.exclusions=externals/**
 
 sonar.cfamily.threads=2
 sonar.cfamily.build-wrapper-output=bw-output
